--- a/SOLID Goose Game.Business/SOLID Goose Game.Business.csproj
+++ b/SOLID Goose Game.Business/SOLID Goose Game.Business.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SOLID Goose Game\SOLID Goose Game.csproj" />
+  </ItemGroup>
+
 </Project>
